// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`productsTableHeadersConf > group view with icon 1`] = `
[
  {
    "isBold": true,
    "isFixed": true,
    "prependIcon": [Function],
    "prependIconClass": "handle grabbable",
    "sortable": false,
    "style": {
      "minWidth": "200px",
    },
    "text": "Product name",
    "textKey": "name",
    "value": "name",
    "width": "400px",
  },
  {
    "formatFn": [Function],
    "sortable": false,
    "style": {
      "min-width": "200px",
    },
    "text": "Product code",
    "textKey": "sku",
    "value": "sku",
    "width": "200px",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "isHidden": [Function],
    "showTooltip": [Function],
    "sortable": false,
    "text": "Factories",
    "textKey": "factoryNamesArray",
  },
  {
    "appendIcon": [Function],
    "appendIconClass": "ml-2",
    "appendIconSize": 16,
    "appendIconTooltipText": "Global group",
    "isHidden": true,
    "prependIcon": [Function],
    "prependIconColor": [Function],
    "prependIconSize": 16,
    "sortable": false,
    "text": "Group",
    "textKey": "groupName",
    "value": "groupId",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "sortable": false,
    "text": "Stations",
    "textKey": "stationNamesArray",
  },
  {
    "sortable": false,
    "style": {
      "min-width": "100px",
    },
    "text": "Unit",
    "textKey": "unitId",
    "value": "unitId",
    "width": "100px",
  },
  {
    "sortable": false,
    "style": {
      "min-width": "100px",
    },
    "text": "Alternative unit",
    "textKey": "alternativeUnitId",
    "value": "alternativeUnitId",
    "width": "100px",
  },
  {
    "additionalStyle": {
      "float": "right",
    },
    "appendIcon": "M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z",
    "filterable": false,
    "isHidden": [Function],
    "sortable": false,
    "style": {
      "width": "50px",
    },
  },
]
`;

exports[`productsTableHeadersConf > group view without icon 1`] = `
[
  {
    "isBold": true,
    "isFixed": true,
    "prependIcon": [Function],
    "prependIconClass": "handle grabbable",
    "sortable": false,
    "style": {
      "minWidth": "200px",
    },
    "text": "Product name",
    "textKey": "name",
    "value": "name",
    "width": "400px",
  },
  {
    "formatFn": [Function],
    "sortable": false,
    "style": {
      "min-width": "200px",
    },
    "text": "Product code",
    "textKey": "sku",
    "value": "sku",
    "width": "200px",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "isHidden": [Function],
    "showTooltip": [Function],
    "sortable": false,
    "text": "Factories",
    "textKey": "factoryNamesArray",
  },
  {
    "appendIcon": [Function],
    "appendIconClass": "ml-2",
    "appendIconSize": 16,
    "appendIconTooltipText": "Global group",
    "isHidden": true,
    "prependIcon": [Function],
    "prependIconColor": [Function],
    "prependIconSize": 16,
    "sortable": false,
    "text": "Group",
    "textKey": "groupName",
    "value": "groupId",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "sortable": false,
    "text": "Stations",
    "textKey": "stationNamesArray",
  },
  {
    "sortable": false,
    "style": {
      "min-width": "100px",
    },
    "text": "Unit",
    "textKey": "unitId",
    "value": "unitId",
    "width": "100px",
  },
  {
    "sortable": false,
    "style": {
      "min-width": "100px",
    },
    "text": "Alternative unit",
    "textKey": "alternativeUnitId",
    "value": "alternativeUnitId",
    "width": "100px",
  },
  {
    "additionalStyle": {
      "float": "right",
    },
    "appendIcon": "M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z",
    "filterable": false,
    "isHidden": [Function],
    "sortable": false,
    "style": {
      "width": "50px",
    },
  },
]
`;

exports[`productsTableHeadersConf > list view with icon 1`] = `
[
  {
    "isBold": true,
    "isFixed": true,
    "prependIcon": [Function],
    "prependIconClass": "handle grabbable",
    "sortable": true,
    "style": {
      "minWidth": "200px",
    },
    "text": "Product name",
    "textKey": "name",
    "value": "name",
    "width": "400px",
  },
  {
    "formatFn": [Function],
    "sortable": true,
    "style": {
      "min-width": "200px",
    },
    "text": "Product code",
    "textKey": "sku",
    "value": "sku",
    "width": "200px",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "isHidden": [Function],
    "showTooltip": [Function],
    "sortable": true,
    "text": "Factories",
    "textKey": "factoryNamesArray",
  },
  {
    "appendIcon": [Function],
    "appendIconClass": "ml-2",
    "appendIconSize": 16,
    "appendIconTooltipText": "Global group",
    "isHidden": false,
    "prependIcon": [Function],
    "prependIconColor": [Function],
    "prependIconSize": 16,
    "sortable": true,
    "text": "Group",
    "textKey": "groupName",
    "value": "groupId",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "sortable": true,
    "text": "Stations",
    "textKey": "stationNamesArray",
  },
  {
    "sortable": true,
    "style": {
      "min-width": "100px",
    },
    "text": "Unit",
    "textKey": "unitId",
    "value": "unitId",
    "width": "100px",
  },
  {
    "sortable": true,
    "style": {
      "min-width": "100px",
    },
    "text": "Alternative unit",
    "textKey": "alternativeUnitId",
    "value": "alternativeUnitId",
    "width": "100px",
  },
  {
    "additionalStyle": {
      "float": "right",
    },
    "appendIcon": "M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z",
    "filterable": false,
    "isHidden": [Function],
    "sortable": false,
    "style": {
      "width": "50px",
    },
  },
]
`;

exports[`productsTableHeadersConf > list view without icon 1`] = `
[
  {
    "isBold": true,
    "isFixed": true,
    "prependIcon": [Function],
    "prependIconClass": "handle grabbable",
    "sortable": true,
    "style": {
      "minWidth": "200px",
    },
    "text": "Product name",
    "textKey": "name",
    "value": "name",
    "width": "400px",
  },
  {
    "formatFn": [Function],
    "sortable": true,
    "style": {
      "min-width": "200px",
    },
    "text": "Product code",
    "textKey": "sku",
    "value": "sku",
    "width": "200px",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "isHidden": [Function],
    "showTooltip": [Function],
    "sortable": true,
    "text": "Factories",
    "textKey": "factoryNamesArray",
  },
  {
    "appendIcon": [Function],
    "appendIconClass": "ml-2",
    "appendIconSize": 16,
    "appendIconTooltipText": "Global group",
    "isHidden": false,
    "prependIcon": [Function],
    "prependIconColor": [Function],
    "prependIconSize": 16,
    "sortable": true,
    "text": "Group",
    "textKey": "groupName",
    "value": "groupId",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "sortable": true,
    "text": "Stations",
    "textKey": "stationNamesArray",
  },
  {
    "sortable": true,
    "style": {
      "min-width": "100px",
    },
    "text": "Unit",
    "textKey": "unitId",
    "value": "unitId",
    "width": "100px",
  },
  {
    "sortable": true,
    "style": {
      "min-width": "100px",
    },
    "text": "Alternative unit",
    "textKey": "alternativeUnitId",
    "value": "alternativeUnitId",
    "width": "100px",
  },
  {
    "additionalStyle": {
      "float": "right",
    },
    "appendIcon": "M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z",
    "filterable": false,
    "isHidden": [Function],
    "sortable": false,
    "style": {
      "width": "50px",
    },
  },
]
`;
